Bxc 5478 domino export content type (#2018)
* BXC-5478 move datastream util and permissions helper for access copies service move

* BXC-5478 update tests for content type column

* BXC-5478 cleanup unnecessary params

* BXC-5478 add test

* BXC-5478 streamline code and add test

* BXC-5478 fix tests